--- a/index.html
+++ b/index.html
@@ -139,6 +139,11 @@
                 <div class="link-icon">👥</div>
                 <div class="link-text">ВКонтакте</div>
             </a>
+            
+            <a href="https://www.instagram.com/logovovr" class="link-card" target="_blank">
+                <div class="link-icon">📸</div>
+                <div class="link-text">Instagram</div>
+            </a>
         </div>
     </div>
 
