--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         
         <div class="address">
             Современное оборудование, 180 игр на любой вкус и добрая администрация! 
-            <br>А ещё рутая приватная VIP - зона с PS5 и TV85, 
+            <br>А ещё крутая приватная VIP - зона с PS5 и TV85, 
             <br>И ежемесячные турниры с розыгрышами призов.
             <br>Всё это ждёт именно Вас
             <br>В нашем VR-клубе
