--- a/index.html
+++ b/index.html
@@ -184,10 +184,8 @@
         
         <div class="address">
             Современное оборудование, 180 игр на любой вкус и добрая администрация! 
-            <br>А ещё крутая приватная VIP - зона с PS5 и TV85, 
-            <br>И ежемесячные турниры с розыгрышами призов.
-            <br>Всё это ждёт именно Вас
-            <br>В нашем VR-клубе
+            <br>А ещё крутая приватная VIP - зона с PS5 и TV85 и ежемесячные турниры с розыгрышами призов.
+            <br>Всё это ждёт именно Вас в нашем VR-клубе
         </div>
         <div class="description">
             *Инстаграмм является продукцией компании Meta и запрещён в РФ.
