--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             <br>Всё это ждёт именно Вас в нашем VR-клубе
         </div>
         <div class="description">
-            *Инстаграмм является продукцией компании Meta и запрещён в РФ.
+            *Инстаграм является продукцией компании Meta и запрещён в РФ.
         </div>
     </div>
 
