--- a/index.html
+++ b/index.html
@@ -266,6 +266,10 @@
                 <div class="link-icon">📸</div>
                 <div class="link-text">Instagram*</div>
             </a>
+            <a href="https://vk.com/doc-226543928_685345649" class="link-card" target="_blank" aria-label="Правила посещения">
+                <div class="link-icon">📋</div>
+                <div class="link-text">Правиоа</div>
+            </a>
         </div>
         
         <div class="address">
