--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             </a>
             <a href="https://vk.com/doc-226543928_685345649" class="link-card" target="_blank" aria-label="Правила посещения">
                 <div class="link-icon">📋</div>
-                <div class="link-text">Правиоа</div>
+                <div class="link-text">Правила</div>
             </a>
         </div>
         
