--- a/price-list.html
+++ b/price-list.html
@@ -292,7 +292,7 @@
                 <div class="price-card">
                     <div class="service-name">Свидание</div>
                     <div class="service-duration">Индивидуально</div>
-                    <div class="service-price">по запросу</div>
+                    <div class="service-price">По запросу</div>
                     <div class="service-description">Описания пока нет.</div>
                 </div>
             </div>
