--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 <div class="link-text">Яндекс.Карты</div>
             </a>
             
-            <a href="https://vk.com/logovo_vr" class="link-card" target="_blank" aria-label="Мы ВКонтакте">
+            <a href="https://vk.com/logovo_vr" class="link-card" target="_blank" rel="noopener noreferrer" aria-label="Мы ВКонтакте">
                 <div class="link-icon">👥</div>
                 <div class="link-text">ВКонтакте</div>
             </a>
