--- a/index.html
+++ b/index.html
@@ -262,6 +262,11 @@
                 <div class="link-text">ВКонтакте</div>
             </a>
             
+            <a href="t.me/LOGOVO_GROUP" class="link-card" target="_blank" aria-label="Мы в Telegram">
+                <div class="link-icon">➤</div>
+                <div class="link-text">Telegram</div>
+            </a>
+            
             <a href="https://www.instagram.com/logovovr" class="link-card" target="_blank" aria-label="Мы в Instagram">
                 <div class="link-icon">📸</div>
                 <div class="link-text">Instagram*</div>
