--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
                 <div class="link-text">ВКонтакте</div>
             </a>
             
-            <a href="t.me/LOGOVO_GROUP" class="link-card" target="_blank" aria-label="Мы в Telegram">
+            <a href="https://t.me/LOGOVO_GROUP" class="link-card" target="_blank" aria-label="Мы в Telegram">
                 <div class="link-icon">➤</div>
                 <div class="link-text">Telegram</div>
             </a>
