--- a/price-list.html
+++ b/price-list.html
@@ -222,7 +222,8 @@
     </style>
 </head>
 <body>
-    <a href="index.html" class="back-button">← Назад</a>
+    <a href="index.html" class="back-button">← Назад в логово</a>
+
     
     <div class="container">
         <h1 class="page-title">Прайс-лист</h1>
