--- a/index.html
+++ b/index.html
@@ -273,7 +273,11 @@
             </a>
             <a href="https://vk.com/doc-226543928_685345649" class="link-card" target="_blank" aria-label="Правила посещения">
                 <div class="link-icon">📋</div>
-                <div class="link-text">Правила</div>
+                <div class="link-text">Правила (На ВКонтакте)</div>
+            </a>
+            <a href="rules.html" class="link-card" target="_blank" aria-label="Правила посещения">
+                <div class="link-icon">📋</div>
+                <div class="link-text">Правила (на Сайте)/div>
             </a>
         </div>
         
