--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Logovo VR</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="icon" href="logo.jpeg" type="image/jpeg">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&display=swap');
         
