--- a/index.html
+++ b/index.html
@@ -292,6 +292,11 @@
             *Инстаграм является продукцией компании Meta и запрещён в РФ.
         </p>
     </div>
+    <!-- Где-нибудь в углу -->
+    <a href="tea.html" style="position: fixed; bottom: 5px; right: 5px; font-size: 6px; color: #333; text-decoration: none; opacity: 0.1;" 
+       onmouseover="this.style.opacity='1'" onmouseout="this.style.opacity='0.1'">
+       🫖
+    </a>
 
     <script>
         document.addEventListener('DOMContentLoaded', function() {
