--- a/index.html
+++ b/index.html
@@ -292,8 +292,7 @@
             *Инстаграм является продукцией компании Meta и запрещён в РФ.
         </p>
     </div>
-    <!-- Где-нибудь в углу -->
-    <a href="tea.html" style="position: fixed; bottom: 5px; right: 5px; font-size: 6px; color: #333; text-decoration: none; opacity: 0.1;" 
+    <a href="tea.html" style="position: fixed; bottom: 15px; right: 15px; font-size: 8px; color: #333; text-decoration: none; opacity: 0.1; z-index: 9999;" 
        onmouseover="this.style.opacity='1'" onmouseout="this.style.opacity='0.1'">
        🫖
     </a>
