--- a/index.html
+++ b/index.html
@@ -280,6 +280,10 @@
                 <div class="link-icon">📋</div>
                 <div class="link-text">Правила (на Сайте)</div>
             </a>
+            <a href="code.txt" download class="link-card">
+                <div class="link-icon">🚀</div>
+                <div class="link-text">Secret Code</div>
+            </a>
         </div>
         
         <div class="address">
