--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
             </a>
             <a href="code.txt" download class="link-card">
                 <div class="link-icon">🚀</div>
-                <div class="link-text">Secret Code</div>
+                <div class="link-text">Квест</div>
             </a>
         </div>
         
