--- a/index.html
+++ b/index.html
@@ -284,6 +284,10 @@
                 <div class="link-icon">🚀</div>
                 <div class="link-text">Квест</div>
             </a>
+            <a href="http://logovo-upd-form.kesug.com" download class="link-card">
+                <div class="link-icon">📋</div>
+                <div class="link-text">Предложить правки для сайта (МОЖЕТ НЕ РАБОТАТЬ)</div>
+            </a>
         </div>
         
         <div class="address">
