--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
                 <div class="link-icon">🚀</div>
                 <div class="link-text">Квест</div>
             </a>
-            <a href="http://logovo-upd-form.kesug.com" download class="link-card">
+            <a href="https://frightening-casket-5gg66gx79q9wh4q9q-8000.app.github.dev/" download class="link-card">
                 <div class="link-icon">📋</div>
                 <div class="link-text">Предложить правки для сайта (МОЖЕТ НЕ РАБОТАТЬ)</div>
             </a>
