--- a/index.html
+++ b/index.html
@@ -284,9 +284,13 @@
                 <div class="link-icon">🚀</div>
                 <div class="link-text">Квест</div>
             </a>
-            <a href="https://frightening-casket-5gg66gx79q9wh4q9q-8000.app.github.dev/" download class="link-card">
+            <a href="https://frightening-casket-5gg66gx79q9wh4q9q-8000.app.github.dev/" class="link-card">
                 <div class="link-icon">📋</div>
-                <div class="link-text">Предложить правки для сайта (МОЖЕТ НЕ РАБОТАТЬ)</div>
+                <div class="link-text">Предложить правки для сайта (Github Codepaces, может не работать)</div>
+            </a>
+            <a href="https://logovo-upd-form.onrender.com" class="link-card">
+                <div class="link-icon">📋</div>
+                <div class="link-text">Предложить правки для сайта (Render, работает 24/7 но может работать медленно)</div>
             </a>
         </div>
         
