--- a/index.html
+++ b/index.html
@@ -288,9 +288,9 @@
                 <div class="link-icon">📋</div>
                 <div class="link-text">Предложить правки для сайта (Github Codepaces, может не работать)</div>
             </a>
-            <a href="https://logovo-upd-form.onrender.com" class="link-card">
+            <a href="upd-form.html" class="link-card">
                 <div class="link-icon">📋</div>
-                <div class="link-text">Предложить правки для сайта (Render, работает 24/7 но может работать медленно)</div>
+                <div class="link-text">Предложить правки для сайта (Github Pages, с отправкой на почту разработчика сайта)</div>
             </a>
         </div>
         
