--- a/upd-form.html
+++ b/upd-form.html
@@ -72,6 +72,12 @@
             z-index: -1;
             opacity: 0.1;
         }
+
+        .nav-buttons {
+            margin-top: 20px;
+            border-top: 1px solid #00ff00;
+            padding-top: 15px;
+        }
     </style>
 </head>
 <body>
@@ -116,6 +122,13 @@
             </div>
             <button type="submit">EXECUTE_TRANSMISSION</button>
         </form>
+        
+        <div class="nav-buttons">
+            <div class="prompt">
+                <span>// NAVIGATION:</span>
+            </div>
+            <button onclick="window.location.href='index.html'">RETURN_TO_MAIN_TERMINAL</button>
+        </div>
         
         <div class="prompt">
             <span>// SYSTEM_STATUS: <span style="color:#00ff00">ONLINE</span></span>
