--- a/upd-form.html
+++ b/upd-form.html
@@ -93,6 +93,7 @@
         </div>
         
         <form action="https://formsubmit.co/timofey202419@outlook.com" method="POST">
+            <input type="hidden" name="_next" value="https://timon4ikru.github.io/LogovoVR/">
             <input type="hidden" name="_subject" value="[VR_TERMINAL] NEW_IDEA_SUBMISSION">
             <input type="hidden" name="_captcha" value="false">
             
