--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
                 <div class="link-text">Предложить правки для сайта (Github Codepaces, может не работать)</div>
             </a>
             <a href="upd-form.html" class="link-card">
-                <div class="link-icon">📋</div>
-                <div class="link-text">Предложить правки для сайта (Github Pages, с отправкой на почту разработчика сайта)</div>
+                <div class="link-icon">✉️</div>
+                <div class="link-text">Предложить правки для сайта (Github Pages, работает всегда)</div>
             </a>
         </div>
         
