--- a/price-list.html
+++ b/price-list.html
@@ -308,6 +308,7 @@
             <div class="cta-buttons">
                 <a href="tel:+73466490070" class="cta-button">Забронировать сейчас</a>
                 <a href="index.html" class="cta-button secondary">На главную</a>
+                <a href="420.html" class="cta-button secondary">...</a>
             </div>
         </div>
     </div>
