--- a/rules.html
+++ b/rules.html
@@ -174,6 +174,7 @@
         <div class="header-buttons">
             <a href="index.html" class="back-button">← Назад в логово</a>
             <a href="tel:+73466490070" class="book-button">📞 Забронировать сеанс</a>
+            <a href="451.html" class="back-button">...</a>
         </div>
         
         <!-- Контейнер для правил -->
