--- a/price-list.html
+++ b/price-list.html
@@ -307,7 +307,7 @@
         <div class="cta-bottom">
             <div class="cta-buttons">
                 <a href="tel:+73466490070" class="cta-button">Забронировать сейчас</a>
-                <a href="index.html" class="cta-button secondary">На главную</a>
+                <a href="index.html" class="cta-button secondary">Назад в логово</a>
                 <a href="420.html" class="cta-button secondary">...</a>
             </div>
         </div>
