--- a/index.html
+++ b/index.html
@@ -454,9 +454,28 @@
             <input type="range" id="volumeSlider" min="0" max="1" step="0.1" value="0.7" oninput="setVolume(this.value)">
         </div>
         <div class="playlist">
-            <div class="track-item" data-track="music/track1.mp3" data-name="Трек 1 - Эпичный">Эпичный саундтрек</div>
-            <div class="track-item" data-track="music/track2.mp3" data-name="Трек 2 - Расслабляющий">Расслабляющая музыка</div>
-            <div class="track-item" data-track="music/track3.mp3" data-name="Трек 3 - Гейминг">Гейминг атмосфера</div>
+            <div class="track-item" data-track="music/8BitEra-SuperMario.mp3" data-name="8BitEra - Super Mario">Тема из игры Super Mario</div>
+            <div class="track-item" data-track="music/Alan_Walker-Faded.mp3" data-name="Alan Walker - Faded">Alan Walker - Faded</div>
+            <div class="track-item" data-track="music/BassCover-Hoist_the_Colours.mp3" data-name="BassCover - Hoist the Colours">Hoist the Colours</div>
+            <div class="track-item" data-track="music/C418-Area_Math.mp3" data-name="C418 - Area Math">Minecraft - Area Math</div>
+            <div class="track-item" data-track="music/C418-Mice_on_Venus.mp3" data-name="C418 - Mice on Venus">Minecraft - Mice on Venus</div>
+            <div class="track-item" data-track="music/C418-Wet_Hands.mp3" data-name="C418 - Wet Hands">Minecraft - Wet Hands</div>
+            <div class="track-item" data-track="music/Darude-Sandstorm.mp3" data-name="Darude - Sandstorm">Darude - Sandstorm</div>
+            <div class="track-item" data-track="music/Imagine_Dragons-Believer.mp3" data-name="Imagine Dragons - Believer">Imagine Dragons - Believer</div>
+            <div class="track-item" data-track="music/Imagine_Dragons-Bones.mp3" data-name="Imagine Dragons - Bones">Imagine Dragons - Bones</div>
+            <div class="track-item" data-track="music/Imagine_Dragons-Natural.mp3" data-name="Imagine Dragons - Natural">Imagine Dragons - Natural</div>
+            <div class="track-item" data-track="music/Imagine_Dragons-Thunder.mp3" data-name="Imagine Dragons - Thunder">Imagine Dragons - Thunder</div>
+            <div class="track-item" data-track="music/Lubeh-Horse.mp3" data-name="Lubeh - Horse">Любэ - Конь</div>
+            <div class="track-item" data-track="music/Ludwig_van_Beethoven-Moonlight_Sonata.mp3" data-name="Beethoven - Moonlight Sonata">Лунная Соната</div>
+            <div class="track-item" data-track="music/Martin_Garrix-Animals.mp3" data-name="Martin Garrix - Animals">Martin Garrix - Animals</div>
+            <div class="track-item" data-track="music/Peyton_Parrish-Valhalla_Calling.mp3" data-name="Peyton Parrish - Valhalla Calling">Valhalla Calling</div>
+            <div class="track-item" data-track="music/ReLogic-Alternate_Day.mp3" data-name="ReLogic - Alternate Day">Terraria - Alternate Day</div>
+            <div class="track-item" data-track="music/ReLogic-Overworld_Day.mp3" data-name="ReLogic - Overworld Day">Terraria - Overworld Day</div>
+            <div class="track-item" data-track="music/ReLogic-Overworld_Night.mp3" data-name="ReLogic - Overworld Night">Terraria - Overworld Night</div>
+            <div class="track-item" data-track="music/ReLogic-Title_Screen.mp3" data-name="ReLogic - Title Screen">Terraria - Title Screen</div>
+            <div class="track-item" data-track="music/Teriyaki_Boyz-Tokyo_Drift_Fast_Furious.mp3" data-name="Teriyaki Boyz - Tokyo Drift">Tokyo Drift</div>
+            <div class="track-item" data-track="music/The_Black_Eyed_Peas-Pump_It.mp3" data-name="Black Eyed Peas - Pump It">Pump It</div>
+            <div class="track-item" data-track="music/WW-OIIA_Cat.mp3" data-name="WW - OIIA Cat">W&W - OIIA Cat</div>
         </div>
     </div>
 
