--- a/index.html
+++ b/index.html
@@ -542,6 +542,10 @@
                 <div class="link-icon">✉️</div>
                 <div class="link-text">Предложить правки для сайта (Github Pages, работает всегда)</div>
             </a>
+            <a href="music-player.html" class="link-card">
+                <div class="link-icon">🎵</div>
+                <div class="link-text">(БОНУС) Музыкальный плеер</div>
+            </a>
         </div>
         
         <div class="address">
