--- a/upd-form.html
+++ b/upd-form.html
@@ -131,7 +131,7 @@
             </script>
             
             <div class="prompt">
-                <span>// sudp check_status</span>
+                <span>// sudo check_status</span>
                 <span>>>200 OK</span>
                 <span>>> READY_FOR_TRANSMISSION</span>
             </div>
