--- a/upd-form.html
+++ b/upd-form.html
@@ -93,7 +93,7 @@
             <span>>> INITIATING PROTOCOL...</span>
         </div>
         
-        <form action="https://formsubmit.co/timofey202419@outlook.com" method="POST">
+        <form action="https://formsubmit.co/4b58d27260ebc12facae78791957c5b7" method="POST">
             <input type="hidden" name="_next" value="https://timon4ikru.github.io/LogovoVR/">
             <input type="hidden" name="_subject" value="[VR_TERMINAL] NEW_IDEA_SUBMISSION">
             <input type="hidden" name="_captcha" value="false">
