Added more music

--- a/index.html
+++ b/index.html
@@ -457,21 +457,41 @@
             <span>🔊</span>
             <input type="range" id="volumeSlider" min="0" max="1" step="0.1" value="0.7" oninput="setVolume(this.value)">
         </div>
+        
         <div class="playlist">
             <div class="track-item" data-track="music/8BitEra-SuperMario.mp3" data-name="8BitEra - Super Mario">Тема из игры Super Mario</div>
-            <div class="track-item" data-track="music/BassCover-Hoist_the_Colours.mp3" data-name="BassCover - Hoist the Colours">Hoist the Colours</div>
-            <div class="track-item" data-track="music/C418-Area_Math.mp3" data-name="C418 - Area Math">Minecraft - Area Math</div>
-            <div class="track-item" data-track="music/C418-Wet_Hands.mp3" data-name="C418 - Wet Hands">Minecraft - Wet Hands</div>
-            <div class="track-item" data-track="music/Imagine_Dragons-Believer.mp3" data-name="Imagine Dragons - Believer">Imagine Dragons - Believer</div>
-            <div class="track-item" data-track="music/Imagine_Dragons-Bones.mp3" data-name="Imagine Dragons - Bones">Imagine Dragons - Bones</div>
-            <div class="track-item" data-track="music/Imagine_Dragons-Natural.mp3" data-name="Imagine Dragons - Natural">Imagine Dragons - Natural</div>
-            <div class="track-item" data-track="music/Imagine_Dragons-Thunder.mp3" data-name="Imagine Dragons - Thunder">Imagine Dragons - Thunder</div>
-            <div class="track-item" data-track="music/Lubeh-Horse.mp3" data-name="Любэ - Конь">Конь</div>
-            <div class="track-item" data-track="music/ReLogic-Alternate_Day.mp3" data-name="ReLogic - Alternate Day">Terraria - Alternate Day</div>
-            <div class="track-item" data-track="music/ReLogic-Overworld_Day.mp3" data-name="ReLogic - Overworld Day">Terraria - Overworld Day</div>
-            <div class="track-item" data-track="music/ReLogic-Overworld_Night.mp3" data-name="ReLogic - Overworld Night">Terraria - Overworld Night</div>
-            <div class="track-item" data-track="music/ReLogic-Title_Screen.mp3" data-name="ReLogic - Title Screen">Terraria - Title Screen</div>
-            <div class="track-item" data-track="music/WW-OIIA_Cat.mp3" data-name="WW - OIIA Cat">W&W - OIIA Cat</div>
+            <div class="track-item" data-track="music/ACDC-Highway_to_Hell.mp3" data-name="AC/DC - Highway to Hell">Highway to Hell (AC/DC)</div>
+            <div class="track-item" data-track="music/Aleksandr_Rybak-Fairytale.mp3" data-name="Александр Рыбак - Fairytale">Fairytale (Александр Рыбак)</div>
+            <div class="track-item" data-track="music/APSENT-Mojno_ya_s_toboy.mp3" data-name="AP$ENT - Можно я с тобой">Можно я с тобой (AP$ENT)</div>
+            <div class="track-item" data-track="music/BassCover-Hoist_the_Colours.mp3" data-name="BassCover - Hoist the Colours">Hoist the Colours (BassCover, Hans Zimmer)</div>
+            <div class="track-item" data-track="music/C418-Area_Math.mp3" data-name="C418 - Area Math">Area Math (C418, Minecraft)</div>
+            <div class="track-item" data-track="music/C418-Wet_Hands.mp3" data-name="C418 - Wet Hands">Wet Hands (C418, Minecraft)</div>
+            <div class="track-item" data-track="music/Dschinghis_Khan-Moskau.mp3" data-name="Dschinghis Khan - Moskau">Moskau (Dschinghis Khan)</div>
+            <div class="track-item" data-track="music/Dyan_Dxxdy-Cute_Depressed.mp3" data-name="Dyan Dxxdy - Cute Depressed">Cute Depressed (Dyan Dxxdy)</div>
+            <div class="track-item" data-track="music/Dyan_Dxxdy-Cute_Depressed_Slowed.mp3" data-name="Dyan Dxxdy - Cute Depressed (Slowed)">Cute Depressed (Slowed) (Dyan Dxxdy)</div>
+            <div class="track-item" data-track="music/Imagine_Dragons-Believer.mp3" data-name="Imagine Dragons - Believer">Believer (Imagine Dragons)</div>
+            <div class="track-item" data-track="music/Imagine_Dragons-Bones.mp3" data-name="Imagine Dragons - Bones">Bones (Imagine Dragons)</div>
+            <div class="track-item" data-track="music/Imagine_Dragons-Natural.mp3" data-name="Imagine Dragons - Natural">Natural (Imagine Dragons)</div>
+            <div class="track-item" data-track="music/Imagine_Dragons-Thunder.mp3" data-name="Imagine Dragons - Thunder">Thunder (Imagine Dragons)</div>
+            <div class="track-item" data-track="music/Issam_Alnajjar-Hadal_Ahbek.mp3" data-name="Isaam Alnajjar - Hadal Ajbek">Hadal Ajbek (Isaam Alnajjar)</div>
+            <div class="track-item" data-track="music/Korol_i_Shut-Eli_Myaso_Muzhiki.mp3" data-name="Король и Шут - Ели мясо мужики">Ели мясо мужики (Король и Шут)</div>
+            <div class="track-item" data-track="music/Korol_i_Shut-Kukla_Kolduna.mp3" data-name="Король и Шут - Кукла колдуна">Кукла колдуна (Король и Шут)</div>
+            <div class="track-item" data-track="music/Korol_i_Shut-Prygnu_so_Skaly.mp3" data-name="Король и Шут - Прыгну со скалы">Прыгну со скалы (Король и Шут)</div>
+            <div class="track-item" data-track="music/Lubeh-Horse.mp3" data-name="Любэ - Конь">Конь (Любэ)</div>
+            <div class="track-item" data-track="music/Mission_Impossible-Main_Theme.mp3" data-name="Mission Impossible (Main Theme)">Main theme from Mission Impossible</div>
+            <div class="track-item" data-track="music/ReLogic-Alternate_Day.mp3" data-name="Re-Logic - Alternate Day">Alternate Day (Re-Logic, Terraria)</div>
+            <div class="track-item" data-track="music/ReLogic-Dungeon.mp3" data-name="Re-Logic - Dungeon">Dungeon (Re-Logic, Terraria)</div>
+            <div class="track-item" data-track="music/ReLogic-Eclipse.mp3" data-name="Re-Logic - Eclipse">Eclipse (Re-Logic, Terraria)</div>
+            <div class="track-item" data-track="music/ReLogic-Ice.mp3" data-name="Re-Logic - Ice">Ice (Re-Logic, Terraria)</div>
+            <div class="track-item" data-track="music/ReLogic-Mushrooms.mp3" data-name="Re-Logic - Mushrooms">Mushrooms (Re-Logic, Terraria)</div>
+            <div class="track-item" data-track="music/ReLogic-Ocean.mp3" data-name="Re-Logic - Ocean">Ocean (Re-Logic, Terraria)</div>
+            <div class="track-item" data-track="music/ReLogic-Overworld_Day.mp3" data-name="Re-Logic - Overworld Day">Overworld Day (Re-Logic, Terraria)</div>
+            <div class="track-item" data-track="music/ReLogic-Overworld_Night.mp3" data-name="Re-Logic - Overworld Night">Overworld Night (Re-Logic, Terraria)</div>
+            <div class="track-item" data-track="music/ReLogic-Title_Screen.mp3" data-name="Re-Logic - Title Screen">Title Screen (Re-Logic, Terraria)</div>
+            <div class="track-item" data-track="music/Sheet_Music_Boss-Rush_E.mp3" data-name="Sheet Music Boss - RUSH E">RUSH E (Sheet Music Boss)</div>
+            <div class="track-item" data-track="music/Star_Wars-The_Imperial_March.mp3" data-name="Star Wars - The Imperial March">The Imperial March (Star Wars)</div>
+            <div class="track-item" data-track="music/Tonws_and_I-Dance_Monkey.mp3" data-name="Tones and I - Dance Monkey">Dance Monkey (Tones and I)</div>
+            <div class="track-item" data-track="music/WW-OIIA_Cat.mp3" data-name="W&W - OIIA Cat">OIIA Cat (W&W)</div>
         </div>
     </div>
 
