--- a/index.html
+++ b/index.html
@@ -602,11 +602,11 @@
                     </a>
                     <a href="https://frightening-casket-5gg66gx79q9wh4q9q-8000.app.github.dev/" class="link-card">
                         <div class="link-icon">🔧</div>
-                        <div class="link-text">Правки (GitHub Codespaces)</div>
+                        <div class="link-text">Предложить правки (через GitHub Codespaces)</div>
                     </a>
                     <a href="upd-form.html" class="link-card">
                         <div class="link-icon">✉️</div>
-                        <div class="link-text">Правки (GitHub Pages)</div>
+                        <div class="link-text">Предложить правки (через GitHub Pages)</div>
                     </a>
                     <a href="music-player.html" class="link-card">
                         <div class="link-icon">🎵</div>
