--- a/rules.html
+++ b/rules.html
@@ -221,7 +221,7 @@
             </div>
 
             <div class="rules-section">
-                <h2>Общие положения</h2>
+                <h2>1. Общие положения</h2>
                 <p>1.1. Информация о действующих ценах и акциях размещаются на стойке Администратора, в наших сообществах в социальных сетях и рассылаются посредством мессенджеров.</p>
                 <p>1.2. Оплата производится в рублях, наличными денежными средствами, банковской картой, онлайн переводом, переводом на расчетный счет организации с использованием QR кода.</p>
                 <p>1.3. Настоящие Правила являются публичной офертой в соответствии со статьями 435,437 Гражданского Кодекса РФ.</p>
@@ -241,7 +241,7 @@
             </div>
 
             <div class="rules-section">
-                <h2>Посетитель в праве</h2>
+                <h2>2. Посетитель в праве</h2>
                 <p>2.1. Получать необходимую и достоверную информацию о работе Сообщества и оказываемых им услугах.</p>
                 <p>2.2. Заблаговременно бронировать необходимое количество игровых стоек на интересующее Посетителя время.</p>
                 <p>2.3. Пользоваться услугами Сообщества, получать удовольствие и положительные эмоции от проведенного времени в пространстве виртуальной реальности.</p>
@@ -252,9 +252,8 @@
                 <p>2.8. Получить статус Участника Сообщества, приобретая Метку Участника<sup>1</sup> и открывая бонусный счет<sup>2</sup>.</p>
             </div>
 
-            <!-- Продолжение остальных разделов -->
             <div class="rules-section">
-                <h2>Просим обратить внимание</h2>
+                <h2>3. Просим обратить внимание</h2>
                 <p>3.1. Помещения игрового сообщества, его обстановка и все оборудование являются частной собственностью. Посетителям следует помнить об этом и бережно относиться к чужому имуществу.</p>
                 <p>3.2. Если Вы посетили нас с маленькими детьми дошкольного возраста, в целях недопущения неприятных инцидентов (падение, ушиб, столкновение с игроками виртуальной реальности и пр.), убедительно просим не оставлять их без внимания и Вашего присмотра.</p>
                 <p>3.3. На территории игрового сообщества в целях безопасности ведется видеонаблюдение.</p>
@@ -264,7 +263,7 @@
             </div>
 
             <div class="rules-section">
-                <h2>Посетителям запрещается</h2>
+                <h2>4. Посетителям запрещается</h2>
                 <p>4.1. Посещать Сообщество в плохом и депрессивном настроении.</p>
                 <p>4.2. Оскорблять других посетителей и сотрудников Сообщества, в выражениях не выходить за рамки нормативной лексики.</p>
                 <p>4.3. Причинять ущерб интерьеру, оборудованию и прочему имуществу Сообщества.</p>
@@ -284,7 +283,7 @@
             </div>
 
             <div class="rules-section">
-                <h2>Посетитель обязан</h2>
+                <h2>5. Посетитель обязан</h2>
                 <p>5.1. В случае преднамеренной/непреднамеренной порчи имущества Сообщества компенсировать заведению в денежном эквиваленте нанесенного вреда актуальную рыночную стоимость выведенного из строя предмета, во избежание привлечения Посетителя к ответственности в рамках действующего законодательства.</p>
                 <p>5.2. Строго соблюдать правила пожарной безопасности.</p>
                 <p>5.3. Соблюдать актуальные действующие правила Сообщества.</p>
@@ -294,7 +293,7 @@
             </div>
 
             <div class="rules-section">
-                <h2>Сотрудники Сообщества обязаны</h2>
+                <h2>6. Сотрудники Сообщества обязаны</h2>
                 <p>6.1. Встретить Посетителя и проконсультировать его по вопросам, касающихся оказываемых услуг.</p>
                 <p>6.2. Выдать Посетителю чек после оплаты услуги.</p>
                 <p>6.3. Быть отзывчивыми и приветливыми.</p>
@@ -306,7 +305,7 @@
             </div>
 
             <div class="rules-section">
-                <h2>Сотрудники Сообщества имеют право</h2>
+                <h2>7. Сотрудники Сообщества имеют право</h2>
                 <p>7.1. Отказать в обслуживании и нахождении на территории заведения в случае несоблюдения указанных правил или по иным веским причинам без возврата денежных средств за оплаченные услуги.</p>
                 <p>7.2. Просить Посетителя подождать, если он пришел раньше забронированного времени.</p>
                 <p>7.3. Просить покинуть Сообщество без объяснения причины, если действия Посетителя будут расцениваться агрессивными и ущемляющими права сотрудников Сообщества или других Посетителей.</p>
@@ -317,7 +316,7 @@
             </div>
 
             <div class="rules-section">
-                <h2>К игре не допускаются:</h2>
+                <h2>8. К игре не допускаются:</h2>
                 <p>8.1. Лица с ограниченными возможностями, имеющие противопоказания к участию в активных играх.</p>
                 <p>8.2. Лица с психическими расстройствами любого рода.</p>
                 <p>8.3. Посетители в состоянии наркотического и/или алкогольного опьянения.</p>
