--- a/500.html
+++ b/500.html
@@ -26,5 +26,19 @@
     <div class="message">Сервер устал и прилёг</div>
     <div class="message">Зайди попозже, ок?</div>
     <div style="font-size: 3em;">🔧🚧☕</div>
+
+    <audio id="errorSound" autoplay>
+        <source src="err_snds/HTML500.mp3" type="audio/mpeg">
+        Твой браузер не поддерживает аудио.
+    </audio>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            const audio = document.getElementById('errorSound');
+            audio.play().catch(error => {
+                console.log('Автовоспроизведение заблокировано:', error);
+            });
+        });
+    </script>
 </body>
 </html>
