Last update this week

--- a/admin-panel.html
+++ b/admin-panel.html
@@ -14,7 +14,7 @@
         }
 
         body {
-            background: linear-gradient(to bottom, #000000, #00ff00);
+            background: linear-gradient(to bottom, #000000, #00ff00c9);
             color: #00ff00;
             min-height: 100vh;
             transition: background 0.3s ease;
