--- a/index.html
+++ b/index.html
@@ -619,6 +619,10 @@
                         <div class="link-icon">🎵</div>
                         <div class="link-text">(БОНУС) Музыкальный плеер</div>
                     </a>
+                    <a href="https://timon4ikru.github.io/maybe-useful-things/" class="link-card">
+                        <div class="link-icon">🕛</div>
+                        <div class="link-text">(БОНУС) New Year Clock</div>
+                    </a>
                 </div>
             </div>
         </div>
