--- a/index.html
+++ b/index.html
@@ -615,7 +615,7 @@
                         <div class="link-icon">🎵</div>
                         <div class="link-text">(БОНУС) Музыкальный плеер</div>
                     </a>
-                    <a href="https://timon4ikru.github.io/maybe-useful-things/" class="link-card">
+                    <a href="https://timon4ikru.github.io/maybe-useful-things/newyearclock.html" class="link-card">
                         <div class="link-icon">🕛</div>
                         <div class="link-text">(БОНУС) New Year Clock</div>
                     </a>
