--- a/index.html
+++ b/index.html
@@ -803,6 +803,11 @@
         <div class="snowflake">❅</div>
         <div class="snowflake">❆</div>
         <div class="snowflake">❄</div>
+        <div class="snowflake">❅</div>
+        <div class="snowflake">❆</div>
+        <div class="snowflake">❄</div>
+        <div class="snowflake">❅</div>
+        <div class="snowflake">❆</div>
     </div>
 
     <div class="top-panel">
